# rq-models

./: .dockerignore  .gitignore  .mise.toml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile  Dockerfile.local  Dockerfile.vllm  entrypoint.sh  entrypoint.vllm.sh  test.sh
docs/: BENCHMARK-REPORT.md  INFERENCE_LESSONS.md  MODEL_COMPATIBILITY.md  QUANTIZATION-GUIDE.md  SPRINT-004-PHASE1-VALIDATION.md  SPRINT-004-PHASE2-PORT-NOTES.md  SPRINT-004-PHASE2BC-INTEGRATION.md  THROUGHPUT_CONFIGURATION_MODEL.md  battery_results.json  ppl_sweep_gemma_results.txt  ppl_sweep_results.txt  quality_results.json
k8s/: Chart.yaml  README.md  values.yaml
scripts/: battery_test.py  bench_n_parallel.py  bench_speculative.py  bench_tps.sh  benchmark_rotorquant.py  benchmark_spectral.py  benchmark_throughput.py  calibrate_spectral.py  concurrent_bench.py  convert_dflash_drafts.sh  cross_substrate_parity.py  det_test.py  eval_longbench.py  eval_niah.py  eval_perplexity.py  generate_codebooks.py  llama_rebase_agent.py  longctx_test.py  mtp_probe.py  needle_test.py  perf_bench.py  ppl_sweep.py  ppl_sweep.sh  ppl_sweep_gemma.sh  prefill_bench.py  probe_27b_correctness.sh  probe_kv_quality.py  quality_battery.py  run_inference.py  run_sprint006_experiment.sh  run_sprint008_experiment.sh  sprint004_phase1_smoke.sh  sprint004_phase2_kernel_test.py  sweep_dflash.py  validate_dflash.py
tests/: test_codebook.py  test_core.py  test_dflash_e2e.py  test_kv_cache.py  test_outlier.py  test_spectral.py  test_speculative.py
turboquant/: __init__.py  core.py  (+6 more)
(+184 files in other folders)
